--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script
-  src="https://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-  crossorigin="anonymous"></script>
-  <link rel="style.css" href="/css/master.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.js"
+    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Towers-Of-Hanoi</title>
   </head>
   <body>
+    <div> Div 1 </div>
     <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
