adding visuals, basic click functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <title>Towers-Of-Hanoi</title>
   </head>
   <body>
-    <div> Div 1 </div>
+    <div id="pole1" class="pole">
+      <div id="ringLarge"> LARGE </div>
+      <div id="ringMedium"> MEDIUM </div>
+      <div id="ringSmall"> SMALL </div>
+    </div>
+    <div id="pole2" class="pole">
+    </div>
+    <div id="pole3" class="pole">
+
+    </div>
     <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
