--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div id="ringSmall"> SMALL </div>
     </div>
     <div id="pole2" class="pole">
+      <div id="ringLarge"> LARGE </div>
+      <div id="ringMedium"> MEDIUM </div>
+      <div id="ringSmall"> SMALL </div>
     </div>
     <div id="pole3" class="pole">
 
