Split completed. Bronze Level Achieved

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
 
     </div>
     <script src="script.js" charset="utf-8"></script>
+    <script src="Model.js" charset="utf-8"></script>
+    <script src="View.js" charset="utf-8"></script>
   </body>
 </html>
