added more rings

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
   <body>
     <div id="pole1" class="pole">
-      <div id="ringLarge"> LARGE </div>
-      <div id="ringMedium"> MEDIUM </div>
-      <div id="ringSmall"> SMALL </div>
+      <div id="ring4"> 4 </div>
+      <div id="ring3"> 3 </div>
+      <div id="ring2"> 2 </div>
+      <div id="ring1"> 1 </div>
+      <div id="ring0"> 0 </div>
     </div>
     <div id="pole2" class="pole">
     </div>
