--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Towers-Of-Hanoi</title>
+    <!-- <img src="images/temple.jpg" alt=""> -->
   </head>
   <body>
     <div id="pole1" class="pole">
-      <div id="ring4"> 4 </div>
-      <div id="ring3"> 3 </div>
-      <div id="ring2"> 2 </div>
-      <div id="ring1"> 1 </div>
-      <div id="ring0"> 0 </div>
+      <div id="ring4" class="ring"> <p>I</p> </div>
+      <div id="ring3" class="ring"> <p>O</p> </div>
+      <div id="ring2" class="ring"> <p>N</p> </div>
+      <div id="ring1" class="ring"> <p>A</p> </div>
+      <div id="ring0" class="ring"> <p>H</p> </div>
     </div>
     <div id="pole2" class="pole">
+
     </div>
     <div id="pole3" class="pole">
 
