--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <img src="images/temple.jpg" alt=""> -->
   </head>
   <body>
+    <h1 align="center">>-----MOVE THE TOWER ---></h1>
     <div id="pole1" class="pole">
       <div id="ring4" class="ring"> <p>I</p> </div>
       <div id="ring3" class="ring"> <p>O</p> </div>
