passes all validators

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Towers-Of-Hanoi</title>
-
-    <!-- <img src="images/temple.jpg" alt=""> -->
   </head>
   <body>
-    <h1 align="center">>-----MOVE THE TOWER ---></h1>
+    <h1>>-----MOVE THE TOWER ---></h1>
     <div id="pole1" class="pole">
       <div id="ring4" class="ring"> <p>I</p> </div>
       <div id="ring3" class="ring"> <p>O</p> </div>
