--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Towers-Of-Hanoi</title>
   </head>
   <body>
-    <h1>>-----MOVE THE TOWER ---></h1>
+    <h1 class="blink_me">>-----MOVE---THE---TOWER ---></h1>
     <div id="pole1" class="pole">
       <div id="ring4" class="ring"> <p>I</p> </div>
       <div id="ring3" class="ring"> <p>O</p> </div>
